# batchup

./: LICENSE  README.md  TODO.md  pyproject.toml
src/batchup/: __init__.py  args.py  backup.py  entries.py  interrupt.py  main.py  orphans.py  patterns.py  rules.py  target.py  tree.py  zip.py
